<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zuoyangding.aroundme.Activity.LoginActivity">

    <com.google.android.gms.common.SignInButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/google_btn"
        android:layout_below="@+id/email_register_bt"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"></com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/email_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email Login"
        android:layout_below="@+id/password_tx"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"

        android:layout_alignParentEnd="true"
        android:background="@drawable/profile_button_dark"
        android:textColor="#ffffff" />


    <EditText
        android:id="@+id/email_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Email..."
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_tx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_tx"
        android:ems="10"
        android:hint="Password..."
        android:inputType="textPassword" />

    <Button
        android:id="@+id/email_register_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_login_btn"

        android:text="Email Registration"
        android:background="@drawable/profile_button_dark"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/password_tx"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="45dp"></LinearLayout>


</RelativeLayout>
