...
        android:layout_height="60dp"
        tools:background="#ffD9C55D"
        android:id="@+id/topBar"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/profileButton"
            android:background="@null"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:layout_width="50dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bottomBar"
        android:id="@+id/group_list"/>


</RelativeLayout>
