...
        android:layout_height="180dp"
        android:layout_above="@+id/nicknameLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

    <Button
        android:id="@+id/reportBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nicknameLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/nicknameLayout"
        android:layout_marginBottom="27dp"
...
