...
            android:scaleType="centerInside"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/chat_messages"
        android:layout_alignParentStart="true"
        android:dividerHeight="16dp"
        android:divider="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topBar"
...
