...
        android:layout_below="@+id/topBar"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <Button
        android:id="@+id/reportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/introLayout"
        android:layout_alignStart="@+id/introLayout"
        android:layout_below="@+id/introLayout"
        android:layout_marginTop="27dp"
...
